# cppmini2048

./: README.md
src/: CMakeLists.txt  board.cc  board.h  enumeration.cc  retrograde.cc  retrograde2.cc  types.h
test/: CMakeLists.txt  test.cc
